Implementado classes auxiliares

--- a/Prática cadastro/Prática cadastro.csproj
+++ b/Prática cadastro/Prática cadastro.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Prática_cadastro</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Entitites\Enums\" />
+  </ItemGroup>
+
 </Project>
